--- a/src/by/bsu/kolodyuk/layout.fxml
+++ b/src/by/bsu/kolodyuk/layout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.*?>
 
-<BorderPane fx:id="pane" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.bsu.kolodyuk.OpenCVController">
+<BorderPane fx:id="pane" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.bsu.kolodyuk.ImageController">
     <bottom>
         <FlowPane alignment="CENTER" hgap="5.0" prefHeight="140.0" prefWidth="900.0" vgap="5.0">
             <padding>
